[package]
name = "ea"
version = "0.1.2"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Ea is helper macro/function to create function chaining"
repository = "https://github.com/yuulive/ea"
license = "BSD-3-Clause"
keywords = ["helper", "chain", "functions", "chaining", "pattern"]
categories = ["development-tools", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
